--- a/src/common/style/kit.css
+++ b/src/common/style/kit.css
@@ -31,6 +31,11 @@
   text-decoration: none;
 }
 
+.Button {
+  text-decoration: none;
+
+}
+
 .Main-Button-Unfocused {
     position: relative;
   background: none;
