--- a/src/common/style/section.css
+++ b/src/common/style/section.css
@@ -1220,6 +1220,10 @@ box-shadow: var(--main-shadow);
     width: 55%;
     max-width: 100%;
     }
+      .popup-container {
+        margin-top: 5rem  ;
+    }
+
 }
 /* Responsive adjustments */
 @media (max-width: 1024px) {
@@ -1354,6 +1358,7 @@ box-shadow: var(--main-shadow);
 
     }
 
+  
 
     .expanded-card-details {
         overflow-y: auto;
